--- a/marvel_api/marvel_api/io_config.yaml
+++ b/marvel_api/marvel_api/io_config.yaml
@@ -4,7 +4,7 @@ default:
   # Add your credentials for the source you use, and delete the rest.
   AWS_ACCESS_KEY_ID: "{{ env_var('AWS_ACCESS_KEY_ID') }}"
   AWS_SECRET_ACCESS_KEY: "{{ env_var('AWS_SECRET_ACCESS_KEY') }}"
-  AWS_REGION: us-east-1
+  AWS_REGION: "{{ env_var('AWS_REGION') }}"
   POSTGRES_DBNAME: marvel
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
